<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.elpis-dev</groupId>
    <artifactId>reactive-websockets</artifactId>
    <version>1.0.0-alpha</version>

    <packaging>pom</packaging>

    <name>Reactive WebSockets</name>
    <description>A reactive WebSocket framework for Spring Boot</description>
    <url>https://github.com/elpis-dev/reactive-websockets</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Elpis Development</name>
            <email>elpis.devs@gmail.com</email>
            <url>https://github.com/elpis-dev</url>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/elpis-dev/reactive-websockets.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/elpis-dev/reactive-websockets.git</developerConnection>
        <url>https://github.com/elpis-dev/reactive-websockets</url>
    </scm>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.release>17</maven.compiler.release>

        <maven.surefire.version>3.5.4</maven.surefire.version>
        <maven.compiler.version>3.14.1</maven.compiler.version>
        <maven.install.version>3.1.4</maven.install.version>
        <maven.source.version>3.4.0</maven.source.version>
        <maven.javadoc.version>3.12.0</maven.javadoc.version>
        <maven.gpg.version>3.2.8</maven.gpg.version>
        <maven.flatten.version>1.7.3</maven.flatten.version>
        <maven.spotless.version>3.1.0</maven.spotless.version>

        <central.publishing.plugin.version>0.10.0</central.publishing.plugin.version>

        <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <spring.boot.version>3.5.8</spring.boot.version>

        <log4j2.version>2.25.3</log4j2.version>

        <reactive-websockets.version>1.0.0-alpha</reactive-websockets.version>

        <resilience4j.version>2.3.0</resilience4j.version>
    </properties>

    <modules>
        <module>reactive-websockets-model</module>
        <module>reactive-websockets-starter</module>
        <module>functional-tests</module>
        <module>report-aggregate</module>
        <module>reactive-websockets-core</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>central</id>
            <url>https://central.sonatype.com/api/v1/publisher</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven.source.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${maven.spotless.version}</version>
                <configuration>
                    <java>
                        <!-- Apply Google Java Format -->
                        <googleJavaFormat/>

                        <!-- Additional import order configuration -->
                        <importOrder />

                        <!-- Remove unused imports -->
                        <removeUnusedImports />

                        <!-- Format Annotations -->
                        <formatAnnotations />

                        <!-- Wildcard Imports are not allowed -->
                        <forbidWildcardImports />

                        <trimTrailingWhitespace/>

                        <endWithNewline/>
                    </java>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${maven.flatten.version}</version>
                <configuration>
                    <flattenMode>ossrh</flattenMode>
                    <pomElements>
                        <distributionManagement>remove</distributionManagement>
                        <repositories>remove</repositories>
                    </pomElements>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten-clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>${central.publishing.plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <autoPublish>true</autoPublish>
                        </configuration>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>${maven.source.version}</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>${maven.javadoc.version}</version>
                        <configuration>
                            <failOnError>false</failOnError>
                            <failOnWarnings>false</failOnWarnings>
                            <doclint>none</doclint>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${maven.gpg.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
